Make the logo white.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ layout: default
       {% endif %}
     {% endfor %}
     <div class="previews__container">
-      <svg class="logo" viewBox="0 0 1740 526" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:sketch="http://www.bohemiancoding.com/sketch/ns">
+      <svg class="logo" viewBox="0 0 1740 526" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:sketch="http://www.bohemiancoding.com/sketch/ns" style="fill: #FFF;">
         <path d="M420,135 L420,0 L0,0 L0,525 L420,525 L420,390 L330,390 L330,435 L90,435 L90,90 L330,90 L330,135 L420,135" id="Fill-1" sketch:type="MSShapeGroup"></path>
         <path d="M240.001,196.849 L300,196.849 L300,119.999 L120.001,119.999 L120.001,292.5 L240,292.5 L240,345 L180,345 L180,330.902 L120.001,330.902 L120.001,405 L300,405 L300,232.5 L180.001,232.5 L180,180 L240,180 L240.001,196.849" id="Fill-2" sketch:type="MSShapeGroup"></path>
         <path d="M420,300 L420,360 L330,360 L330,165 L420,165 L420,225 L450,225 L450,0 L540,0 L540,525 L450,525 L450,300 L420,300" id="Fill-3" sketch:type="MSShapeGroup"></path>
